微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -14,6 +14,14 @@
            <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
 
+        <a href="/weixin/lendhistory/"><div class="gr_dh">
+            <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
+        </div></a>
+        <div class="gr_dh">
+            <div class="gr_dh_left">租借记录（<span class="col_z">3</span>）</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
+        </div>
         <div class="gr_dh">
             <div class="gr_dh_left">租借记录（<span class="col_z">3</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
