--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -14,16 +14,20 @@
            <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
 
-        <a href="/weixin/lendhistory/"><div class="gr_dh">
+        <a href="/weixin/lendhistory/"><div class="gr_dh gr_dh_top">
             <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
         </div></a>
-        <div class="gr_dh">
-            <div class="gr_dh_left">租借记录（<span class="col_z">3</span>）</div>
+        <a href=""><div class="gr_dh">
+            <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
         </div>
-        <div class="gr_dh">
-            <div class="gr_dh_left">租借记录（<span class="col_z">3</span>）</div>
+        <a href="/weixin/use_help/"><div class="gr_dh">
+            <div class="gr_dh_left">使用帮助</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
+        </div>
+            <a href="/weixin/about/"><div class="gr_dh">
+            <div class="gr_dh_left">关于我们</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
         </div>
 
