--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -21,15 +21,15 @@
         <a href=""><div class="gr_dh">
             <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div>
+        </div></a>
         <a href="/weixin/use_help/"><div class="gr_dh">
             <div class="gr_dh_left">使用帮助</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div>
+        </div></a>
             <a href="/weixin/about/"><div class="gr_dh">
             <div class="gr_dh_left">关于我们</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div>
+        </div></a>
 
 
       <div class="div-content">
