微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -18,18 +18,18 @@
             <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
         </div>
-        <a href=""><div class="gr_dh">
+        <div class="gr_dh"><a href="">
             <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div></a>
-        <a href="/weixin/use_help/"><div class="gr_dh">
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+        </div>
+        <div class="gr_dh"><a href="/weixin/use_help/">
             <div class="gr_dh_left">使用帮助</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div></a>
-        <a href="/weixin/about/"><div class="gr_dh">
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+        </div>
+        <div class="gr_dh"><a href="/weixin/about/">
             <div class="gr_dh_left">关于我们</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div>
-        </div></a>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+        </div>
 
     </div>
     <script src="/static/js/jquery-3.2.1.js"></script>
