微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="gr_cont">
+    <div class="nr_con_all">
        <div class="gr_top">
            <img class="gr_tx" src="{% static '/images/weixin/touxiang.jpg' %}" alt="微信头像">
            <div class="gr_nc">reakyzhou</div>
