--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -7,6 +7,7 @@ body{
   font-family:-apple-system-font, "Helvetica Neue", sans-serif;
   font-weight: 200;
   font-size: 14px;
+  height: 100%;
 }
 *{
   margin:0;
@@ -342,12 +343,11 @@ input.weui-btn_plain-default{
 .zt_zgm{color:#CE3C39;}
 .wk_ts{width: 100%;height: 100px;line-height: 28px;text-align: center;border-top: 1px solid #d2d2d2;border-bottom: 1px solid #d2d2d2;background-color: white;padding-top: 20px;padding-bottom: 20px;}
 .wk_ts a{text-decoration: none;color: #cc0099;}
-.zgtk{width: 380px;height: 380px;margin: 50px auto;background: url("/static/images/weixin/tk.jpg") center no-repeat;}
-.gr_cont{ background-color:#f8f8f8;}
+.gr_cont{background-color:#f8f8f8;}
 .gr_top{width:100%;height: auto;border-bottom: 1px solid #e5e5e5;text-align: center;line-height: 30px;background-color: white;padding-bottom: 30px;color: #999999;}
 .gr_tx{width:120px;height:120px;border-radius:120px;margin: 30px auto;border: none;}
 .gr_nc{font-size: 18px;font-weight: normal;width: 100%;margin-top: -20px;color: #333333;}
-.gr_dh{width: 100%;float: left;background-color: white;border-bottom: 1px solid #e5e5e5; height: 50px;line-height: 50px;}
+.gr_dh{width: 100%;float: left;background-color: white;border-bottom: 1px solid #e5e5e5; height:50px;line-height: 50px;}
 .gr_dh a{text-decoration: none;color: #333333;}
 .gr_dh_top{margin-top: 30px;border-top: 1px solid #e5e5e5; }
 .gr_dh_left{width: 80%;float: left;margin-left: 15px;}
