--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -350,7 +350,7 @@ input.weui-btn_plain-default{
 .gr_nc{font-size: 18px;font-weight: normal;width: 100%;margin-top: -20px;color: #333333;}
 .gr_dh{width: 100%;float: left;border-bottom: 1px solid #e5e5e5; height:50px;line-height: 50px;}
 .gr_dh a{text-decoration: none;color: #333333;}
-.gr_dh_top{margin-top: 30px;border-top: 1px solid #e5e5e5; }
+.gr_dh_top{border-top: 1px solid #e5e5e5; }
 .gr_dh_left{width: 80%;float: left;margin-left: 15px;}
 .gr_dh_right{width: 20px;float: right;margin-right: 15px;text-align: right;}
 .dh_jt{width: 10px;height: auto;border: none;margin-top: 20px;}
