--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -355,3 +355,6 @@ input.weui-btn_plain-default{
 .gr_dh_right{width: 20px;float: right;margin-right: 15px;text-align: right;}
 .dh_jt{width: 10px;height: auto;border: none;margin-top: 20px;}
 .gr_dh_cont{width: 100%;float: left;background-color: white;margin-top: 30px;margin-bottom: 10px;}
+
+.ab_top{width: 100%;height: 200px;background-color: #cc3399;text-align: center;line-height: 30px;color: white;}
+.h1{font-size: 24px;font-weight: bold;}
