微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -1,14 +1,16 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}关于茄子自拍{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <span>轻拍</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
+    <div class="ab_top">
+      践行共享新模式 开创经济轻旅行<br>
+      轻拍科技帮您释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光
+    </div>
+
     <div class="div-content">
         <h5>茄子自拍</h5>
         <span>1.怎么样没注意</span><br>
