--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -357,4 +357,4 @@ input.weui-btn_plain-default{
 .gr_dh_cont{width: 100%;float: left;background-color: white;margin-top: 30px;margin-bottom: 10px;}
 
 .ab_top{width: 100%;height: 200px;background-color: #cc3399;text-align: center;line-height: 30px;color: white;}
-.h1{font-size: 24px;font-weight: bold;}
+.h1{font-size: 22px;font-weight: bold;line-height: 30px;}
