--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -356,5 +356,5 @@ input.weui-btn_plain-default{
 .dh_jt{width: 10px;height: auto;border: none;margin-top: 20px;}
 .gr_dh_cont{width: 100%;float: left;background-color: white;margin-top: 30px;margin-bottom: 10px;}
 
-.ab_top{width: 100%;height: 100px;background-color: #cc3399;text-align: center;line-height: 30px;color: white;}
-.h1{font-size: 20px;font-weight: bold;line-height: 60px;}
+.ab_top{width: 100%;height: 100px;background-color: #cc3399;text-align: center;line-height: 30px;color: white;padding-top: 30px;}
+.h1{font-size: 20px;font-weight: bold;line-height: 30px;}
