--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -8,7 +8,70 @@
 {% block content %}
     <div class="ab_top">
       <span class="h1">践行共享新模式 开创经济轻旅行</span><br>
-      轻拍科技帮您释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光
+      释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光
+    </div>
+
+    <div class="con_white">
+          <h2>源自有遗憾的出游</h2>
+          <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
+          <div class="qy_cont_left">  <h7>经历是</h7><br>
+              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
+可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
+大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
+满意又不好意思让人反复拍。<br>
+结果这次难得的全家出游，没有合影照片记录...<br>
+              <h7>于是想</h7><br>
+如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
+就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
+这多省事多方便！
+          </div>
+          <div class="qy_cont_right">
+              <div class="qy_img_bg qy_bg1">
+                  <div class="qy_img_text">手不够长</div>
+              </div>
+              <div class="qy_img_bg qy_bg2">
+                  <div class="qy_img_text">拍不全背景</div>
+              </div>
+              <div class="qy_img_bg qy_bg3">
+                  <div class="qy_img_text">总拍大头照</div>
+              </div>
+              <div class="qy_img_bg qy_bg4">
+                  <div class="qy_img_text">牺牲为摄影师</div>
+              </div>
+          </div>
+       </div>
+       <div class="con_gray">
+         <h2>我们要做的事</h2>
+          <h5>践行共享新模式 开创经济轻旅行</h5>
+           <div class="yz_cont">
+                <div class="yz_left"> <img class="yz_left_img" src="{% static 'images/about/wm_yz.jpg' %}"></div>
+                <div class="yz_right">
+               帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户<br>
+通过手机扫码即可租借<span class="ystc">自拍杆</span>，用好可在就近机柜归还，实现用户轻装出游随手自拍<br>
+自拍杆集成了<span class="ystc">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
+以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多旅行装备<br>
+                    愿景是通过互联网和智能硬件技术，结合<span class="ystc">共享模式</span>，打造新的经济<span class="ystc">轻旅行</span>方式～
+                </div>
+            </div>
+       </div>
+       <div class="con_white jx_hight">
+       <h2>我们坚信共享是未来</h2>
+        <h5 class="icon_h5">践行共享新模式 开创经济轻旅行</h5>
+       <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
+           <h6>消费升级</h6>
+           <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。</div>
+       </div>
+       <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/jingshen.png' %}"></div>
+           <h6>精神文化发展</h6>
+           <div class="home_ys_sm">物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。</div>
+       </div>
+       <div class="home_ys icon_ys_right">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/gongjice.png' %}"></div>
+           <h6>供给侧改革</h6>
+           <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
+       </div>
     </div>
 
     <div class="div-content">
