微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -360,4 +360,5 @@ input.weui-btn_plain-default{
 .h1{font-size: 18px;font-weight: bold;line-height: 40px;}
 .h2{font-size: 16px;font-weight: bold;color: #cc0099;}
 .h3{font-size: 14px;font-weight: bold;}
-.ab_fg{height: 10px;padding: 20px 15px 30px 15px;border-bottom: 1px dashed #f8f8f8;}
+.ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;}
+
