--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -11,17 +11,17 @@
       释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光
     </div>
 
-    <div class="con_white">
+    <div class="ab_txt">
           <h2>源自有遗憾的出游</h2>
-          <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
-          <div class="qy_cont_left">  <h7>经历是</h7><br>
-              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
-可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
-大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
-满意又不好意思让人反复拍。<br>
+          没有自拍留影，没有拍照签到，好像没有发生过><br>
+          <span class="col_z">经历是</span><br>
+              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。
+可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。
+大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的
+满意又不好意思让人反复拍。
 结果这次难得的全家出游，没有合影照片记录...<br>
-              <h7>于是想</h7><br>
-如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
+              <span class="col_z">于是想</span><br>
+如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。
 就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
 这多省事多方便！
           </div>
