微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="ab_top">
-        <h1>践行共享新模式 开创经济轻旅行</h1><br>
+        <h1>践行共享新模式 开创经济轻旅行</h1>
       释放沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光
     </div>
 
