微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -14,15 +14,13 @@
     <div class="ab_txt">
           <h2>源自有遗憾的出游</h2>
           没有自拍留影，没有拍照签到，好像没有发生过><br>
-          <span class="col_z">经历是</span><br>
-              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。
-可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。
-大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的
-满意又不好意思让人反复拍。
-结果这次难得的全家出游，没有合影照片记录...<br>
-              <span class="col_z">于是想</span><br>
-如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。
-就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
+          <h3>经历是<br>
+              端午节一家到舟山游玩，想拍照留影，记录家人在一起美好。
+可自拍杆是忘了带，不想再买。觉得浪费，且下次还会忘带，因为家里已有2根。
+大家不方便的相互拍照，没有全家人合影记录，也没有满意的自拍照片...<br>
+              <h3>于是想</h3>
+如果这时有租自拍杆的，花几块钱，租用半天，用好了还回去。
+不用每次出游都带自拍杆了，需要时随手借一根，用完既还随借随还。
 这多省事多方便！
           </div>
           <div class="qy_cont_right">
