--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -35,14 +35,12 @@
           <h2>源自有遗憾的出游</h2>
           <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
           <div class="qy_cont_left">  <h7>经历是</h7><br>
-              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
-可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
-大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
-满意又不好意思让人反复拍。<br>
-结果这次难得的全家出游，没有合影照片记录...<br>
+              端午节一家到舟山游玩，<br>想拍照留影，记录家人在一起美好。<br>
+可自拍杆是忘了带，不想再买。<br>觉得浪费，且下次还会忘带，因为家里已有2根。<br>
+我们只有不方便的相互拍照，<br>没有全家人合影记录，也没有满意的自拍照片...<br>
               <h7>于是想</h7><br>
-如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
-就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
+如果这时有租自拍杆的，花几块钱，租用半天，用好了还回去。<br>
+不用每次出游都带自拍杆，需要时随手借一根，用完既还随借随还。<br>
 这多省事多方便！
           </div>
           <div class="qy_cont_right">
