微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -14,7 +14,7 @@
     <div class="ab_txt">
           <h2>源自有遗憾的出游</h2>
           没有自拍留影，没有拍照签到，好像没有发生过><br>
-          <h3>经历是<br>
+        <h3>经历是</h3>
               端午节一家到舟山游玩，想拍照留影，记录家人在一起美好。
 可自拍杆是忘了带，不想再买。觉得浪费，且下次还会忘带，因为家里已有2根。
 大家不方便的相互拍照，没有全家人合影记录，也没有满意的自拍照片...<br>
