--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -35,9 +35,9 @@
           <h2>源自有遗憾的出游</h2>
           <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
           <div class="qy_cont_left">  <h7>经历是</h7><br>
-              端午节一家到舟山游玩，<br>想拍照留影，记录家人在一起美好。<br>
+              端午节一家到舟山游玩，想拍照留影，记录家人在一起美好。<br>
 可自拍杆是忘了带，不想再买。<br>觉得浪费，且下次还会忘带，因为家里已有2根。<br>
-我们只有不方便的相互拍照，<br>没有全家人合影记录，也没有满意的自拍照片...<br>
+我们只有不方便的相互拍照，没有全家人合影记录，也没有满意的自拍照片...<br>
               <h7>于是想</h7><br>
 如果这时有租自拍杆的，花几块钱，租用半天，用好了还回去。<br>
 不用每次出游都带自拍杆，需要时随手借一根，用完既还随借随还。<br>
