微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -13,7 +13,7 @@
 
     <div class="ab_txt">
           <h2>源自有遗憾的出游</h2>
-          没有自拍留影，没有拍照签到，好像没有发生过><br>
+          没有自拍留影，没有拍照签到，好像没有发生过<br>
         <h3>经历是</h3>
               端午节一家到舟山游玩，想拍照留影，记录家人在一起美好。
 可自拍杆是忘了带，不想再买。觉得浪费，且下次还会忘带，因为家里已有2根。
@@ -23,18 +23,18 @@
 不用每次出游都带自拍杆了，需要时随手借一根，用完既还随借随还。
 这多省事多方便！
           </div>
-          <div class="qy_cont_right">
-              <div class="qy_img_bg qy_bg1">
-                  <div class="qy_img_text">手不够长</div>
+          <div class="ab_cont_right">
+              <div class="ab_img_bg qy_bg1">
+                  <div class="ab_img_text">手不够长</div>
               </div>
-              <div class="qy_img_bg qy_bg2">
-                  <div class="qy_img_text">拍不全背景</div>
+              <div class="ab_img_bg qy_bg2">
+                  <div class="ab_img_text">拍不全背景</div>
               </div>
-              <div class="qy_img_bg qy_bg3">
-                  <div class="qy_img_text">总拍大头照</div>
+              <div class="ab_img_bg qy_bg3">
+                  <div class="ab_img_text">总拍大头照</div>
               </div>
-              <div class="qy_img_bg qy_bg4">
-                  <div class="qy_img_text">牺牲为摄影师</div>
+              <div class="ab_img_bg qy_bg4">
+                  <div class="ab_img_text">牺牲为摄影师</div>
               </div>
           </div>
        </div>
