--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -361,8 +361,8 @@ h1{font-size: 18px;font-weight: bold;line-height: 40px;}
 h2{font-size: 16px;font-weight: bold;color: #cc0099;}
 h3{font-size: 14px;font-weight: bold;}
 .ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;}
-.ab_cont_right{float: left;width: 100%;height: auto;padding-top: 20px;}
-.ab_img_bg{float:left;width:20%;height:20%;margin-right:6%;}
+.ab_cont_right{float: left;padding-top: 20px;}
+.ab_img_bg{float:left;width:20%;height:20%;margin-right:2%;}
 .ab_bg1{background-size:100% 100%; background: url("/static/images/weixin/qy_shouduan.jpg") center no-repeat;}
 .ab_bg2{background-size:100% 100%; background: url("/static/images/weixin/qy_datou.jpg") center no-repeat;}
 .ab_bg3{background-size:100% 100%; background: url("/static/images/weixin/qy_beijing.jpg") center no-repeat;}
