--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -362,9 +362,5 @@ h2{font-size: 16px;font-weight: bold;color: #cc0099;}
 h3{font-size: 14px;font-weight: bold;}
 .ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;}
 .ab_txt_img{float:left;width: 100%;}
-.ab_img_bg{float:left;width:20%;height:20%;margin-right:5%;}
-.ab_bg1{ background: url("/static/images/weixin/qy_shouduan.jpg") center no-repeat;}
-.ab_bg2{background-size:100% 100%; background: url("/static/images/weixin/qy_datou.jpg") center no-repeat;}
-.ab_bg3{background-size:100% 100%; background: url("/static/images/weixin/qy_beijing.jpg") center no-repeat;}
-.ab_bg4{background-size:100% 100%; background: url("/static/images/weixin/qy_sheying.jpg") center no-repeat;}
-.ab_img_text{width: 100%;height: 30px;line-height: 30px; background-color:rgba(255,255,255,0.5);text-align: center;font-size: 14px;color: #333333;margin-top: 80px;}
+.ab_img_cont{float:left;width:20%;height:auto;margin-right:5%;font-size: 12px;line-height: 18px;}
+.img_ab{float:left;width: 100%;height: auto;border: none;margin-bottom: 5px;}
