微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -24,21 +24,10 @@
 这多省事多方便！
         <div class="ab_txt_img">
             <div class="ab_img_cont"><img class="img_ab" src="{% static '/images/weixin/qy_shouduan.jpg' %}" alt="手不够长">手不够长</div>
+            <div class="ab_img_cont"><img class="img_ab" src="{% static '/images/weixin/qy_beijing.jpg' %}" alt="背景不全">背景不全</div>
+            <div class="ab_img_cont"><img class="img_ab" src="{% static '/images/weixin/qy_datou.jpg' %}" alt="总是大头照">总是大头照</div>
+            <div class="ab_img_cont"><img class="img_ab" src="{% static '/images/weixin/qy_sheying.jpg' %}" alt="牺牲一人">牺牲一人</div>
         </div>
-          <div class="ab_cont_right">
-              <div class="ab_img_bg qy_bg1">
-                  <div class="ab_img_text">手不够长</div>
-              </div>
-              <div class="ab_img_bg qy_bg2">
-                  <div class="ab_img_text">拍不全背景</div>
-              </div>
-              <div class="ab_img_bg qy_bg3">
-                  <div class="ab_img_text">总拍大头照</div>
-              </div>
-              <div class="ab_img_bg qy_bg4">
-                  <div class="ab_img_text">牺牲为摄影师</div>
-              </div>
-          </div>
         </div>
        <div class="con_gray">
          <h2>我们要做的事</h2>
