--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -358,7 +358,7 @@ input.weui-btn_plain-default{
 
 .ab_top{background-color: #cc3399;text-align: center;line-height: 20px;color: white;padding: 40px 15px 30px 15px;}
 h1{font-size: 18px;font-weight: bold;line-height: 40px;}
-h2{font-size: 16px;font-weight: bold;color: #cc0099;text-align: center;}
+h2{font-size: 16px;font-weight: bold;color: #cc0099;text-align: center;line-height: 40px;}
 h3{font-size: 14px;font-weight: bold;}
 .ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;}
 .ab_txt_img{float:left;width: 100%;padding-top: 20px;}
