--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -29,17 +29,13 @@
             <div class="ab_img_cont"><img class="img_ab" src="{% static '/images/weixin/qy_sheying.jpg' %}" alt="牺牲一人">牺牲一人</div>
         </div>
         </div>
-       <div class="con_gray">
+       <div class="ab_txt">
          <h2>我们要做的事</h2>
-          <h5>践行共享新模式 开创经济轻旅行</h5>
-           <div class="yz_cont">
-                <div class="yz_left"> <img class="yz_left_img" src="{% static 'images/about/wm_yz.jpg' %}"></div>
-                <div class="yz_right">
-               帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户<br>
-通过手机扫码即可租借<span class="ystc">自拍杆</span>，用好可在就近机柜归还，实现用户轻装出游随手自拍<br>
-自拍杆集成了<span class="ystc">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
+          践行共享新模式，开创经济轻旅行<br>帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户。
+通过手机扫码即可租借<span class="col_z">自拍杆</span>，用好可就近机柜归还，实现用户轻装出游随手自拍<br>
+自拍杆集成了<span class="col_z">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多旅行装备<br>
-                    愿景是通过互联网和智能硬件技术，结合<span class="ystc">共享模式</span>，打造新的经济<span class="ystc">轻旅行</span>方式～
+                    愿景是通过互联网和智能硬件技术，结合<span class="<br>">共享模式</span>，打造新的经济<span class="<br>">轻旅行</span>方式～
                 </div>
             </div>
        </div>
