--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -360,7 +360,7 @@ input.weui-btn_plain-default{
 h1{font-size: 18px;font-weight: bold;line-height: 40px;}
 h2{font-size: 16px;font-weight: bold;color: #cc0099;text-align: center;line-height: 40px;}
 h3{font-size: 14px;font-weight: bold;}
-.ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;height: 100%;}
+.ab_txt{padding: 30px 15px;border-bottom: 1px dashed #f8f8f8;text-align:left;line-height: 24px;height: auto;}
 .ab_txt_img{float:left;width: 100%;padding-top: 20px;}
 .ab_img_cont{float:left;width:22%;height:auto;margin-right:3%;font-size: 14px;line-height: 20px;text-align: center;color: #999999;}
 .ab_img_cont_rig{margin-right: 0;}
