--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -364,4 +364,4 @@ h3{font-size: 14px;font-weight: bold;}
 .ab_txt_img{float:left;width: 100%;padding-top: 20px;padding-bottom: 30px;}
 .ab_img_cont{float:left;width:22%;margin-right:3%;font-size: 14px;line-height: 20px;text-align: center;color: #999999;}
 .ab_img_cont_rig{margin-right: 0;}
-.img_ab{float:left;width: 100%;height: auto;border: none;}
+.img_ab{float:left;width: 100%;height:100%;border: none;}
