微信公众号建设

--- a/templates/weixin/about.html
+++ b/templates/weixin/about.html
@@ -31,16 +31,17 @@
         </div>
     <div class="ab_txt">
          <h2>我们要做的事</h2>
-          践行共享新模式，开创经济轻旅行<br>帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户。
+          践行共享新模式，开创经济轻旅行<br>
+        <h3>服务</h3>
+        帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户。
 通过手机扫码即可租借<span class="col_z">自拍杆</span>，用好可就近机柜归还，实现用户轻装出游随手自拍<br>
 自拍杆集成了<span class="col_z">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
 以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多旅行装备<br>
-                    愿景是通过互联网和智能硬件技术，结合<span class="<br>">共享模式</span>，打造新的经济<span class="<br>">轻旅行</span>方式～
+        <h3>愿景</h3>
+        通过互联网和智能硬件技术，结合<span class="<br>">共享模式</span>，打造新的经济<span class="<br>">轻旅行</span>方式～
                 </div>
 
 
     <script src="/static/js/jquery-3.2.1.js"></script>
-    <script>
 
-    </script>
 {% endblock %}
