微信公众号建设

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -74,7 +74,7 @@
        </div>
        <div class="con_white jx_hight">
        <h2>我们坚信共享是未来</h2>
-        <h5 class="icon_h5">践行共享新模式 开创经济轻旅行</h5>
+        <h5 class="icon_h5">用共享让我们的出游变得轻松</h5>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
            <h6>消费升级</h6>
