--- a/templates/weixin/question.html
+++ b/templates/weixin/question.html
@@ -1,15 +1,32 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}常见问题{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>常见问题</span>
-    </div>
+
 
 {% endblock %}
 
 {% block content %}
+
+    <div class="gr_dh_cont">
+           <div class="gr_dh gr_dh_top"><a href="/weixin/lendhistory/">
+            <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+           </div>
+           <div class="gr_dh"><a href="">
+            <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+           </div>
+            <div class="gr_dh"><a href="/weixin/use_help/">
+            <div class="gr_dh_left">使用帮助</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+            </div>
+            <div class="gr_dh"><a href="/weixin/about/">
+            <div class="gr_dh_left">关于我们</div>
+            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
+             </div>
+        </div>
+
     <div class="div-content">
         <span><a href="questions/money.html" >押金说明和退还</a></span>
         <span><a href="questions/money.html" >自拍杆使用说明</a></span>
