微信公众号建设

--- a/templates/weixin/question.html
+++ b/templates/weixin/question.html
@@ -9,7 +9,7 @@
 {% block content %}
 
     <div class="gr_dh_cont">
-           <div class="gr_dh gr_dh_top"><a href="/weixin/lendhistory/">
+           <div class="gr_dh"><a href="/weixin/lendhistory/">
             <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
