--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -365,3 +365,6 @@ h3{font-size: 14px;font-weight: bold;}
 .ab_img_cont{float:left;width:22%;margin-right:3%;font-size: 14px;line-height: 20px;text-align: center;color: #999999;}
 .ab_img_cont_rig{margin-right: 0;}
 .img_ab{float:left;width: 100%;height:100%;border: none;}
+
+.help_dh{width: 100%;float: left;border-bottom: 1px solid #e5e5e5; height:50px;line-height: 50px;font-weight: normal;}
+.help_dh a{text-decoration: none;color: #333333;}
