--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -366,5 +366,5 @@ h3{font-size: 14px;font-weight: bold;}
 .ab_img_cont_rig{margin-right: 0;}
 .img_ab{float:left;width: 100%;height:100%;border: none;}
 
-.help_dh{width: 100%;float: left;border-bottom: 1px solid #e5e5e5; height:50px;line-height: 50px;font-weight: normal;}
+.help_dh{float: left;border-bottom: 1px solid #e5e5e5; height:50px;line-height: 50px;font-weight: normal;padding: 0 15px;}
 .help_dh a{text-decoration: none;color: #333333;}
