--- a/templates/weixin/use_help.html
+++ b/templates/weixin/use_help.html
@@ -6,31 +6,13 @@
 
 {% block content %}
 
-    <div class="gr_dh_cont">
-           <div class="gr_dh"><a href="/weixin/lendhistory/">
-            <div class="gr_dh_left">租借记录（<span class="col_z">{{ lendtime }}</span>）</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-           </div>
-           <div class="gr_dh"><a href="">
-            <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-           </div>
-            <div class="gr_dh"><a href="/weixin/use_help/">
-            <div class="gr_dh_left">使用帮助</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-            </div>
-            <div class="gr_dh"><a href="/weixin/about/">
-            <div class="gr_dh_left">关于我们</div>
-            <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
-             </div>
-        </div>
+    <div class="help_dh"><a href="">自拍杆如何使用</a></div>
+    <div class="help_dh"><a href="">扫码后自拍杆未取出怎么办</a></div>
+    <div class="help_dh"><a href="">自拍杆损坏或丢失怎么办</a></div>
+    <div class="help_dh"><a href="">如何归还自拍杆</a></div>
+    <div class="help_dh"><a href="">能否借多根自拍杆</a></div>
+    <div class="help_dh"><a href="">押金如何支付和退还说明</a></div>
 
-    <div class="div-content">
-        <h5>使用帮助</h5>
-        <span>1.怎么样没注意</span><br>
-        <span>2.；</span><br>
-        <span>3 怎么样怎么样。</span>
-    </div>
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script>
