微信公众号建设

--- a/templates/weixin/question.html
+++ b/templates/weixin/question.html
@@ -1,6 +1,6 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-{% block title %}常见问题{% endblock %}
+{% block title %}使用帮助{% endblock %}
 {% block head %}
 
 
