--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -32,7 +32,6 @@
                 url:"/weixin/wxconfig/",//自己填写请求地址
                 data:{url: location.href},
                 success:function(result){
-                    debugger
                     wx.config({
                         // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
                         debug: true,
@@ -51,24 +50,21 @@
             });
         });
 
-
-
         wx.error(function(res) {
             alert("出错了：" + res.errMsg);//这个地方的好处就是wx.config配置错误，会弹出窗口哪里错误，然后根据微信文档查询即可。
         });
 
         wx.ready(function() {
-            alert('10');
             wx.checkJsApi({  
          jsApiList : ['scanQRCode'],  
          success:function(res) {
-                    alert('relalive test ' + res);
          }  
       }); 
 
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
-                alert('1');
+                var is_deposit = {{ is_deposit }};
+                alert(is_deposit);
                 wx.scanQRCode({
                     needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
                     scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
