--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -17,7 +17,9 @@
                 2.如5天未归还，默认购买此自拍杆，系统将您押金改为购物款并自动收取；<br>
                 3.首次借用需支付49元押金，归还自拍杆后，随时到个人中心快捷提现退还押金。
             </div>
+            <input type="hidden" id="deposit" value="{{ is_deposit }}">
      </div>
+
 
     <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
     <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
@@ -34,7 +36,7 @@
                 success:function(result){
                     wx.config({
                         // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-                        debug: true,
+                        debug: false,
                         // 必填，公众号的唯一标识
                         appId: result.appid,
                         // 必填，生成签名的时间戳
@@ -63,7 +65,7 @@
 
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
-                var is_deposit = {{ is_deposit }};
+                var is_deposit = $('#deposit').val();
                 alert(is_deposit);
                 wx.scanQRCode({
                     needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
