--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -66,7 +66,10 @@
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
                 var is_deposit = $('#deposit').val();
-                alert(is_deposit);
+                if (is_deposit == false)
+                {
+                    location.href = '/weixin/pay/';
+                }
                 wx.scanQRCode({
                     needResult: 0, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
                     scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
