--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -66,6 +66,7 @@
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
                 var is_deposit = $('#deposit').val();
+                alert(is_deposit);
                 if (is_deposit == false)
                 {
                     alert(location.href);
@@ -77,7 +78,6 @@
                     scanType: ["qrCode","barCode"], // 可以指定扫二维码还是一维码，默认二者都有
                     success: function (res) {
                         var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-                        alert(result);
                     }
                 });
             };
