--- a/templates/weixin/pay.html
+++ b/templates/weixin/pay.html
@@ -11,8 +11,7 @@
 
 {% block content %}
     <div class="div-content">
-        <span>押金金额{% customer.money %}</span>
-        <input type="button" value="立即提现" onclick="withdraw()">
+        <input type="button" value="充值49元" onclick="withdraw()">
         <span>温馨提示</span>
         <span>申请成功后，预计0-5个工作日退还至您原支付账户</span>
     </div>
@@ -23,9 +22,6 @@
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
     <script>
-        function withdraw()
-        {
-            showTip('提现成功', 'success');
-        }
+
     </script>
 {% endblock %}
