--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -19,7 +19,7 @@
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
            <div class="gr_dh"><a href="">
-            <div class="gr_dh_left">押金提现（<span class="col_z">{{ money }}</span>）</div>
+            <div class="gr_dh_left">押金提现（<span class="col_z">{{ deposit }}</span>）</div>
             <div class="gr_dh_right"><img class="dh_jt" src="{% static '/images/weixin/rig.png' %}" alt="更多"></div></a>
            </div>
             <div class="gr_dh"><a href="/weixin/use_help/">
