--- a/templates/weixin/withdraw.html
+++ b/templates/weixin/withdraw.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="div-content">
-        <span>押金金额{% customer.money %}</span>
+        <span>押金金额{{ deposit }}</span>
         <input type="button" value="立即提现" onclick="withdraw()">
         <span>温馨提示</span>
         <span>申请成功后，预计0-5个工作日退还至您原支付账户</span>
