--- a/templates/weixin/use_help.html
+++ b/templates/weixin/use_help.html
@@ -6,12 +6,12 @@
 
 {% block content %}
 
-    <div class="help_dh"><a href="">自拍杆如何使用</a></div>
-    <div class="help_dh"><a href="">扫码后自拍杆未取出怎么办</a></div>
-    <div class="help_dh"><a href="">自拍杆损坏或丢失怎么办</a></div>
-    <div class="help_dh"><a href="">如何归还自拍杆</a></div>
-    <div class="help_dh"><a href="">能否借多根自拍杆</a></div>
-    <div class="help_dh"><a href="">押金如何支付和退还说明</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/how_use/">自拍杆如何使用</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/get_fail/">扫码后自拍杆未取出怎么办</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/lost/">自拍杆损坏或丢失怎么办</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/how_return/">如何归还自拍杆</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/several/">能否借多根自拍杆</a></div>
+    <div class="help_dh"><a href="/weixin/use_help/deposit_question/">押金如何支付和退还说明</a></div>
 
 
     <script src="/static/js/jquery-3.2.1.js"></script>
