--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -1,5 +1,6 @@
 {% extends "weixin/base.html" %}
 {% load static %}
+{% load own_tag %}
 {% block title %}茄子自拍{% endblock %}
 {% block head %}
 
@@ -8,9 +9,9 @@
 {% block content %}
     <div class="nr_con_all">
        <div class="gr_top">
-           <img class="gr_tx" src="{% static '/images/weixin/touxiang.jpg' %}" alt="微信头像">
-           <div class="gr_nc">reakyzhou</div>
-           于2017/08/29在西江千户苗寨景区成为轻拍一员<br>
+           <img class="gr_tx" src="{{ headimgurl }}" alt="微信头像">
+           <div class="gr_nc">{{ nickname }}</div>
+           于{{ subscribe_time | datetime_format }}成为轻拍一员<br>
            <span class="col_z">自拍达人一枚，我拍故我在</span>
        </div>
         <div class="gr_dh_cont">
