--- a/templates/weixin/withdraw.html
+++ b/templates/weixin/withdraw.html
@@ -1,21 +1,23 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}押金提现{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>自拍神器</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>押金金额{{ deposit }}</span>
-        <input type="button" value="立即提现" onclick="withdraw()">
-        <span>温馨提示</span>
-        <span>申请成功后，预计0-5个工作日退还至您原支付账户</span>
+
+     <div class="ts_cont">
+       <img class="zgjs_img" src="{% static '/images/weixin/txsq.jpg' %}" alt="发起提现">
     </div>
+    <div class="nr_con">
+            <a href="#"  class="weui-btn weui-btn_primary page__bd_spacing">立即提现{{ deposit }}元</a>
+            <div class="ts_til page__bd_spacing"><div class="ts_til_test">温馨提示</div> </div>
+            <div class="sm_cont">
+                申请成功后，预计0-5个工作日退还至您原支付账户
+            </div>
+     </div>
+
     <div>
         <span id="tip"></span>
     </div>
@@ -25,7 +27,7 @@
     <script>
         function withdraw()
         {
-            showTip('提现成功', 'success');
+            showTip('提现发起成功', 'success');
         }
     </script>
 {% endblock %}
