微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -375,3 +375,12 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_zt_sm{font-size: 16px;font-weight: bold;color: #333333;}
 .txjd_z{color: #179B16;}
 .txjd_d{color: #0099cc;}
+
+.txjd_xq_cont{padding:30px 15px;font-size: 14px; color: #333333;}
+.txjd_dd{width: 100%;line-height: 30px;}
+.txjd_t{float: left;width:20%;margin-right: 10px;}
+.txjd_img{width: 32px;height: 322px;border: none;}
+.txjd_right{float: left;width:80%;text-align: left; }
+.txjd_right_l{float: left;font-size: 14px;line-height: 22px;padding-bottom: 20px;color: #333333;}
+.txjd_time{color: #999999;}
+
