--- a/templates/weixin/help/lost.html
+++ b/templates/weixin/help/lost.html
@@ -1,18 +1,15 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}自拍杆损坏或者丢失怎么办{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>自拍杆损坏或者丢失说明</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.打客服电话</span>
-        <span>2.在线客服</span>
+    <div class="help_xq">
+        <h2>自拍杆损坏或者丢失怎么办</h2>
+        如在租借过程中出现损坏，请还回自拍杆机柜，或联系我们在线客服进行收回维修；<br>
+如果租借过程中丢失，您无需处理，5天后我们自动视为购买，将押金转成自拍杆购买资金。对您下次使用或信用，没有任何影响。
     </div>
 
 {% endblock %}
