--- a/templates/weixin/help/several.html
+++ b/templates/weixin/help/several.html
@@ -1,18 +1,15 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}能否借多根自拍杆{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>能否借多根自拍杆</span>
-    </div>
+
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.打客服电话</span>
-        <span>2.在线客服</span>
+    <div class="help_xq">
+        <h2>能否借多根自拍杆</h2>
+        暂不支持一个账号同时借多根自拍杆
     </div>
 
 {% endblock %}
