--- a/templates/weixin/help/deposit_question.html
+++ b/templates/weixin/help/deposit_question.html
@@ -10,7 +10,7 @@
     <h2>押金如何支付和退还</h2>
      支持微信押金和支付宝信用借。<br>
      未使用信用借的账户，在租借之前，保障个人账号中有49元押金。押金即时支付即时可借；<br>
-     规划自拍杆后，即可进行押金退还提现，在个人中心进行发起提现。提现一般0～5个工作日原路退还到您的支付账号。<br>
+     归还自拍杆后，即可进行押金退还提现，在个人中心进行发起提现。提现一般0～5个工作日原路退还到您的支付账号。
 
     </div>
 
