--- a/templates/weixin/help/get_fail.html
+++ b/templates/weixin/help/get_fail.html
@@ -1,18 +1,16 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}扫码后自拍杆未取出怎么办{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>自拍杆扫码取出失败</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.打客服电话</span>
-        <span>2.在线客服</span>
+    <div class="help_xq">
+        <h2>扫码后自拍杆未取出怎么办</h2>
+        可能因产品使用过程中线路不稳或通信信号缓慢，扫码租借后没有及时开启机柜，拿到不自拍杆。请放心，在自拍杆没有拿出，租借行为是没有发生，不会产生任何费用。
+您可重新扫码试试，或就近换一台机柜试试。
+
     </div>
 
 {% endblock %}
