--- a/templates/weixin/help/how_charge.html
+++ b/templates/weixin/help/how_charge.html
@@ -1,19 +1,15 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}如何给手机充电{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>如何给手机充电</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.使用步骤1</span>
-        <span>2.使用步骤2</span>
-        <span>3.使用步骤3</span>
+    <div class="help_xq">
+        <h2>如何给手机充电</h2>
+        自拍杆集合了充电宝（充电支持主流苹果和安卓手机），方便您在旅游中尽情的拍照摄像，为您提供手机电力保障。<br>
+充电在自拍杆手把侧面，按下打开充电线门，拉出充电线插入手机，即可进行充电。
     </div>
 
 {% endblock %}
