--- a/templates/weixin/help/how_pic.html
+++ b/templates/weixin/help/how_pic.html
@@ -1,19 +1,16 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}自拍杆如何拍照{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>自拍杆如何拍照</span>
-    </div>
+
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.使用步骤1</span>
-        <span>2.使用步骤2</span>
-        <span>3.使用步骤3</span>
+    <div class="help_xq">
+        <h2>自拍杆如何拍照</h2>
+       自拍采用线控，在拉出自拍杆的顶部，有两个线头，可以分别支持安卓和苹果手机（包括苹果7以后的新机型），插入线头后，打开手机摄像功能，自拍杆上的拍照按钮自动激活，直接按下即可进行拍照。<br>
+如出现拍照按钮反应延迟，可能是手机系统反应慢。请在开启手机拍照功能后，过2秒再进行拍照动作。
     </div>
 
 {% endblock %}
