--- a/templates/weixin/help/how_to_use.html
+++ b/templates/weixin/help/how_to_use.html
@@ -1,19 +1,19 @@
 {% extends "weixin/base.html" %}
 {% load static %}
-
+{% block title %}自拍杆如何租借{% endblock %}
 {% block head %}
-    <div class="weixin-title">
-        <div class="div-back"><a href="/weixin/privatecenter/">&lt;返回</a></div>
-        <span>自拍杆如何使用</span>
-    </div>
 
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <span>1.使用步骤1</span>
-        <span>2.使用步骤2</span>
-        <span>3.使用步骤3</span>
+    <div class="help_xq">
+        <h2>自拍杆如何租借</h2>
+        支持微信和支付宝两个渠道的租借，操作步骤：<br>
+1.手机打开微信或支付宝，点击扫一扫功能；<br>
+2.对准自拍杆机柜上的二维码，扫码进入轻拍科技页面（也可直接从公众号或生活号进入）；<br>
+3.确认租借自拍杆，点击租借按钮，自动唤起手机扫码；<br>
+4.再次扫码机柜二维码，系统自动检测准备电量充足的自拍杆，检测您的押金或芝麻信用条件；<br>
+5.机柜自拍杆出口打开，请取走自拍杆。
     </div>
 
 {% endblock %}
