微信公众号建设

--- a/templates/weixin/base.html
+++ b/templates/weixin/base.html
@@ -7,6 +7,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="description" content="茄子自拍 自拍神器 是旅游加共享的平台，通过共享自拍杆为起点，实现轻装旅行，随时自拍。轻拍科技是解决在景区游玩时想要自拍，却没有或忘带自拍杆的用户，而通过租借共享的方式便捷的拿到自拍杆，通过公众号找到景区内任意最近机柜点可归还，并解决手机应急充电的问题。">
+        <meta name="keywords" content="茄子自拍 轻拍科技 自拍杆 共享自拍杆 共享经济 共享单车／共享充电宝／共享雨伞／共享篮球／共享按摩椅／共享直升机 自拍 旅游自拍 共享租赁 共享风口">
         <link href="{% static '/css/weixin.css' %}" rel="stylesheet" type="text/css"/>
         {% block head %}
         {% endblock %}
