fix the privatecenter

--- a/templates/weixin/pay.html
+++ b/templates/weixin/pay.html
@@ -14,8 +14,8 @@
             <a href="#"  class="weui-btn weui-btn_primary page__bd_spacing">充值 {{ deposit }} 元</a>
             <div class="ts_til page__bd_spacing"><div class="ts_til_test">温馨提示</div> </div>
             <div class="sm_cont">
-                1.归还自拍杆后，随时到个人中心退换押金<br>
-                2.充值即表示已阅读并同意茄子自拍<a href="">租借服务协议</a>
+                1.归还自拍杆后，随时到个人中心退还押金<br>
+                2.充值即表示已阅读并同意茄子自拍<a href="/weixin/contract/">租借服务协议</a>
             </div>
      </div>
 
