--- a/templates/weixin/pay.html
+++ b/templates/weixin/pay.html
@@ -11,7 +11,7 @@
        <img class="zgjs_img" src="{% static '/images/weixin/cz.png' %}" alt="发起提现">
     </div>
     <div class="nr_con">
-            <a href="#"  class="weui-btn weui-btn_primary page__bd_spacing">充值 {{ deposit }} 元</a>
+            <a href="#" id="deposit"  class="weui-btn weui-btn_primary page__bd_spacing">充值 {{ deposit }} 元</a>
             <div class="ts_til page__bd_spacing"><div class="ts_til_test">温馨提示</div> </div>
             <div class="sm_cont">
                 1.归还自拍杆后，随时到个人中心退还押金<br>
@@ -22,6 +22,9 @@
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
     <script>
+        $('#deposit').click(function () {
+            alert("123");
+        })
 
     </script>
 {% endblock %}
