fix the privatecenter

--- a/templates/weixin/pay.html
+++ b/templates/weixin/pay.html
@@ -24,7 +24,34 @@
     <script>
         $('#deposit').click(function () {
             alert("123");
-        })
+            callpay();
+        });
+
+        function jsApiCall()
+        {
+            WeixinJSBridge.invoke(
+            'getBrandWCPayRequest', {{ data | safe }},
+            function(res){
+              WeixinJSBridge.log(res.err_msg);
+              //alert(res.err_code+res.err_desc+res.err_msg);
+              window.location.href="{{ redirect_uri }}";
+            }
+            );
+        }
+
+        function callpay()
+        {
+            if (typeof WeixinJSBridge == "undefined"){
+                if( document.addEventListener ){
+                    document.addEventListener('WeixinJSBridgeReady', jsApiCall, false);
+                }else if (document.attachEvent){
+                    document.attachEvent('WeixinJSBridgeReady', jsApiCall);
+                    document.attachEvent('onWeixinJSBridgeReady', jsApiCall);
+                }
+            }else{
+                jsApiCall();
+            }
+        }
 
     </script>
 {% endblock %}
