--- a/templates/weixin/withdraw.html
+++ b/templates/weixin/withdraw.html
@@ -36,6 +36,7 @@
                      if (data == 'SUCCESS')
                      {
                          alert('退款成功');
+                         location.href = '/weixin/privatecenter/'
                      }
                      else{
                          alert('退款失败，请联系客服');
