--- a/templates/weixin/return.html
+++ b/templates/weixin/return.html
@@ -16,6 +16,8 @@
                 第一步：手机扫描机柜二维码，待机柜门自动打开<br>
                 第二步：收好自拍杆放入机柜，手扣朝上
             </div>
+            <input type="hidden" id="lend" value="{{ is_lend }}">
+            <input type="hidden" id="openid" value="{{ openid }}">
      </div>
 
 
@@ -62,8 +64,9 @@
 
             //点击按钮扫描二维码
             document.querySelector('#scanQRCode').onclick = function () {
-                var is_lend_exist = 'True';
-                if (is_deposit == 'True')
+                var is_lend = $('#lend').val();
+                var openid = $('#openid').val();
+                if (is_lend == 'False')
                 {
                     alert('还没有租自拍杆，先去租一个');
                     location.href = '/weixin/lend/?openid='+ openid;
