add weixin function

--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -6,15 +6,6 @@
 {% endblock %}
 
 {% block content %}
-       <div class="ts_cont">
-            <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="自拍杆被掏空">
-       </div>
-       <div class="nr_con">
-            <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
-            <div class="sm_cont">
-                您很有眼光，此处拍照人多，自拍杆已被<span class="col_z">掏空</span>
-            </div>
-       </div>
         {% if has_opacity %}
             <div class="ts_cont ts_cont_all">
                   <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="出杆提示">
@@ -29,13 +20,11 @@
                <img class="zgjs_img" src="{% static '/images/weixin/tk.jpg' %}" alt="自拍杆被掏空">
             </div>
             <div class="nr_con">
-                <a href="#" id="scanQRCode" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
+                <a href="/weixin/nearby/" id="nearby" class="weui-btn weui-btn_default weui-btn_primary page__bd_spacing">查看附近可借自拍杆</a>
                 <div class="sm_cont">
                 您很有眼光，此处拍照人多，自拍杆已被<span class="col_z">掏空</span>
                 </div>
             </div>
         {% endif %}
-
-
 
 {% endblock %}
