add weixin function

--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -25,6 +25,7 @@
 
     <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
     <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
+    <script src="{% static '/js/relalive.js' %}"></script>
     <script>
         $.ajaxSetup({data: {
             csrfmiddlewaretoken: '{{ csrf_token }}'
