--- a/templates/weixin/lend.html
+++ b/templates/weixin/lend.html
@@ -22,6 +22,10 @@
             <input type="hidden" id="lend" value="{{ is_lend }}">
      </div>
 
+    <div>
+        <span id="tip"></span>
+    </div>
+
 
     <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
     <script src="{% static '/js/jweixin-1.2.0.js' %}"></script>
@@ -73,13 +77,13 @@
                 var is_lend = $('#lend').val();
                 if (is_deposit == 'False')
                 {
-                    alert('还没有充值，请先去充值吧？', 'danger');
+                    showTip('还没有充值，请先去充值吧？', 'danger');
                     location.href = '/weixin/pay/?openid='+ openid;
                 }else
                 {
                     if(is_lend == 'True')
                     {
-                        alert("您还有正在借用的订单，在订单完成前，不能再次借用");
+                        showTip("您还有正在借用的订单，在订单完成前，不能再次借用");
                         return
                     }
                     wx.scanQRCode({
