微信公众号建设

--- a/templates/weixin/pay.html
+++ b/templates/weixin/pay.html
@@ -8,7 +8,7 @@
 {% block content %}
 
      <div class="ts_cont">
-       <img class="zgjs_img" src="{% static '/images/weixin/cz.png' %}" alt="发起提现">
+       <img class="zgjs_img" src="{% static '/images/weixin/cz.png' %}" alt="押金充值">
     </div>
     <div class="nr_con">
             <a href="#" id="deposit"  class="weui-btn weui-btn_primary page__bd_spacing">充值 {{ deposit }} 元</a>
